# ZFightingTools

./: .gitignore  CMakeLists.txt  README.md
data/: font.txt
output/: results_log_depth_cf_00.txt  results_log_depth_cf_03.txt  results_log_depth_cf_06.txt  results_log_depth_fn.txt  results_perspective_depth.txt
python/: chart_plotter.py  output_parser.py  plot_depth.py  sample_generator.py  vcs_to_scs_functions.py
src/: batch_tester.hpp  depth_test_batch_main.cpp  depth_test_interactive_main.cpp  depth_test_shader_comparator_main.cpp  option_parser.hpp
src/glfw/: glfw_user_input_interactive.cpp  glfw_user_input_interactive.hpp  glfw_user_input_shader_comparator.cpp  glfw_user_input_shader_comparator.hpp  glfw_window.cpp  glfw_window.hpp
src/renderer/: cylinders_renderer.cpp  cylinders_renderer.hpp  square_renderer.cpp  square_renderer.hpp
src/ui_text/: text_renderer_line.cpp  text_renderer_line.hpp  text_renderer_opengl.cpp  text_renderer_opengl.hpp  text_renderer_vertex.hpp  ui_text_interactive.cpp  ui_text_interactive.hpp  ui_text_shader_comparator.cpp  ui_text_shader_comparator.hpp
src/util/: debug_print.hpp  font_glyph.hpp  font_metrics_parser.cpp  font_metrics_parser.hpp  font_runtime_helper.cpp  font_runtime_helper.hpp  glfw_callback_handler_singleton.cpp  glfw_callback_handler_singleton.hpp  opengl_util.hpp  opengl_util_misc.cpp  opengl_util_shader.cpp  png_util.cpp  png_util.hpp  yaw_pitch_rotation.hpp
